@@ -20,6 +20,7 @@ _Description: Domain name:
 
 Template: netcfg/get_nameservers
 Type: string
+Default: ${nameservers}
 _Description: Name server addresses:
  Please enter the IP addresses (not host names) of up to 3 name servers,
  separated by spaces. Do not use commas. The first server in the list will
